--- a/index.css
+++ b/index.css
@@ -37,10 +37,10 @@ body {
 }
 
 .card {
-  background-color: rgba(255, 255, 255, 0.7); /* Color de fondo con opacidad */
+  background-color: rgb(255, 255, 255); /* Color de fondo con opacidad */
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 2);
   text-align: center;
   width: 200px;
 }
