--- a/css/index.css
+++ b/css/index.css
@@ -13,16 +13,7 @@ body {
   object-fit: cover;
 }
 
-/* .options-containers {
-  width: 800px;
-  height: 70vh;
-  display: flex;
-  opacity: 0.9;
-  background-color: white;
-  border: 1px solid #00000000;
-} */
-
-.options-container {
+.bg-container-options {
   display: flex;
   position: fixed;
   z-index: 1;
@@ -32,38 +23,40 @@ body {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+}
+
+.options-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  position: fixed;
+  z-index: 1;
   align-items: center;
   justify-content: space-around;
 }
 
-.card {
-  background-color: rgb(255, 255, 255); /* Color de fondo con opacidad */
+.card-principal {
+  background-color: rgb(255, 255, 255);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 2);
   text-align: center;
-  width: 200px;
+  width: 350px;
 }
 
-.card h2 {
+.card-principal h2 {
   font-size: 24px;
 }
 
-.card p {
+.card-principal p {
   font-size: 16px;
 }
 
 .title {
   display: flex;
   position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  align-items: normal;
-  justify-content: space-around;
-  color:white;
-  margin-top: 10rem;
+  height: 90%;
+  color: white;
 }
